integrate portal wrapper to GIL

--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -7697,6 +7697,38 @@ a.home--modal-link {
 .contact-buttons-group .loading-message-indicator {
     margin-top: 1em
 }
+#tnthNavWrapper {
+    display: none;
+    .portal-wrapper-content {
+        display: none;
+    }
+}
+#session-warning-modal{
+    .modal-content
+    {
+        font-size: 20px;
+    }
+    .modal-header,
+    .modal-header .modal-title {
+        font-size: 22px;
+    }
+    .modal-header {
+        background: #7C959E;
+        color: #FFF;
+    }
+    .btn {
+        background: #7C959E;
+        color: #FFF;
+        border: 0;
+        cursor: pointer;
+        border-radius: 0;
+        font-size: 18px;
+        padding: 0.5em;
+    }
+    .btn:hover {
+        background: #607d8b;
+    }
+}
 @media (min-width: 1200px) {
     .home--item-container {
         width: 542px;
