--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -2,39 +2,8 @@
 <script>$("#tnthNavWrapper, .watermark").addClass('no-fouc');</script>
 <link rel="stylesheet" href="{{PORTAL}}{{ url_for('static', filename='css/topnav.css') }}">
 <script src="{{PORTAL}}{{ url_for('static', filename='js/tnth.js') }}"></script>
-<script>
-    function _readCookie(name) {
-            var nameEQ = name + "=";
-            var ca = document.cookie.split(';');
-            for (var i = 0; i < ca.length; i++) {
-                var c = ca[i];
-                while (c.charAt(0) == ' ') c = c.substring(1, c.length);
-                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
-            };
-            return null;
-    };
-    var sessionMonitor=function(a){"use strict";function b(a){a&&a.stopPropagation();var b=new Date,c=b-j;a&&a.target&&"stay-logged-in"==a.target.id?(j=b,d(),a=null,i.ping()):c>i.minPingInterval&&(j=b,d(),i.ping())}function c(){d(),i.ping()}function d(){var a=i.sessionLifetime-i.timeBeforeWarning;window.clearTimeout(f),window.clearTimeout(g),f=window.setTimeout(i.onwarning,a),g=window.setTimeout(e,i.sessionLifetime)}function e(){$.when(i.onbeforetimeout()).always(i.ontimeout)}var f,g,h={sessionLifetime:36e5,timeBeforeWarning:6e5,minPingInterval:6e4,activityEvents:"mouseup",pingUrl:window.location.protocol+"//"+window.location.host+"/api/ping",logoutUrl:"/logout",timeoutUrl:"/logout?timeout=1",ping:function(){$.ajax({type:"POST",contentType:"text/plain", cache:false,url:i.pingUrl,crossDomain:!0})},logout:function(){window.location.href=i.logoutUrl},onwarning:function(){var a=Math.round(i.timeBeforeWarning/60/1e3),b=$('<div id="jqsm-warning">Your session will expire in '+a+' minutes. <button id="jqsm-stay-logged-in">Stay Logged In</button><button id="jqsm-log-out">Log Out</button></div>');$("body").children("div#jqsm-warning").length||$("body").prepend(b),$("div#jqsm-warning").show(),$("button#stay-logged-in").on("click",function(a){a&&a.stopPropagation(),i.extendsess(a)}).on("click",function(){b.hide()}),$("button#jqsm-log-out").on("click",i.logout)},onbeforetimeout:function(){},ontimeout:function(){window.location.href=i.timeoutUrl}},i={},j=new Date;return $.extend(i,h,a,{extendsess:b}),$(document).on(i.activityEvents,b),c(),i};
-
-    var truenth_authenticated = {% if user %} true;{% else %} false;{% endif %}
-    // Set default sessionLifetime from Flask config
-    // Subtract 10 seconds to ensure the backend doesn't expire the session first
-    var CONFIG_SESSION_LIFETIME, DEFAULT_SESSION_LIFETIME;
-    var cookieTimeout = _readCookie("SS_TIMEOUT");
-    cookieTimeout = cookieTimeout ? parseInt(cookieTimeout) : null;
-
-    if (cookieTimeout && cookieTimeout > 0) {
-        DEFAULT_SESSION_LIFETIME = (cookieTimeout * 1000) - (cookieTimeout > 10 ? (10 * 1000) : 0);
-    } else {
-        try {
-            CONFIG_SESSION_LIFETIME = {% if config.PERMANENT_SESSION_LIFETIME %} {{config.PERMANENT_SESSION_LIFETIME}} {% else %} "" {% endif %};
-            if (!CONFIG_SESSION_LIFETIME || CONFIG_SESSION_LIFETIME === "") CONFIG_SESSION_LIFETIME = 15 * 60;
-            DEFAULT_SESSION_LIFETIME = (CONFIG_SESSION_LIFETIME * 1000) - (CONFIG_SESSION_LIFETIME > 10 ? (10 * 1000) : 0);
-        } catch(e) {
-            DEFAULT_SESSION_LIFETIME = (15 * 60 * 1000) - (10 * 1000);
-        };
-    };
-</script>
 {% if config.PIWIK_SITEID %}
+<!-- move this to a different JS file in the future perhaps, but leaving it for now, complicated by injection of server side variables -->
 <script type="text/javascript">
     var _paq = _paq || [];
     {% if config.PIWIK_DOMAINS %}
@@ -68,9 +37,9 @@
 {% if not enable_links %}
 <style>#tnthNavXs .tnth-nav-btn{ display: none; }</style>
 {% endif %}
-{% if config["SYSTEM_TYPE"].lower() != "production" %}<div class='watermark'>TRUE<sup>NTH</sup> - {{config.SYSTEM_TYPE}} version - Not for study or clinical use</div>{% endif %}
+{% if config["SYSTEM_TYPE"].lower() != "production" %}<div class='watermark portal-wrapper-content'>TRUE<sup>NTH</sup> - {{config.SYSTEM_TYPE}} version - Not for study or clinical use</div>{% endif %}
 {% if user and not user.has_role(ROLE.WRITE_ONLY) %}
-    <div id="notificationBanner">
+    <div id="notificationBanner" class="portal-wrapper-content">
         <input type="hidden" id="notificationUserId" value="{{user.id}}" />
         <div class="content"></div>
         <span class="close" title="{{_('dismiss')}}">X</span>
@@ -170,37 +139,33 @@
 <div id="session-warning-modal" class="modal fade" tabindex="-1" role="dialog" style="display: none">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header"><h4 class="modal-title" id="sessWarnLabel">{{ _("Your session is about to expire") }}</h4></div>
-      <div class="modal-body">{{ _("Your session will expire in approximately") }} <span id="remaining-time"></span> {{ _("seconds due to inactivity.") }}</div>
-      <div class="modal-footer"><button id="log-out" class="btn btn-default" type="button" data-dismiss="modal">Log Out</button><button id="stay-logged-in" class="btn btn-warning" type="button" data-dismiss="modal">{{ _("Stay Logged In") }}</button></div>
+      <div class="modal-header"><h4 class="modal-title" id="sessWarnLabel">{{_("Your session is about to expire")}}</h4></div>
+      <div class="modal-body">
+        <span id="remaining-time">{{_("Your session will expire in approximately {time} seconds due to inactivity.")}}</span></div>
+      <div class="modal-footer"><button id="log-out" class="btn btn-default" type="button" data-dismiss="modal">{{_("Log Out")}}</button><button id="stay-logged-in" class="btn btn-warning" type="button" data-dismiss="modal">{{ _("Stay Logged In") }}</button></div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-<script>
-$(document).ready(function(){
-  // Configure and start the session timeout monitor
-  {% if user %}
-      var sessMon = sessionMonitor({
-            sessionLifetime: DEFAULT_SESSION_LIFETIME,
-            timeBeforeWarning: 1 * 60 * 1000,
-            minPingInterval: 1 * 60 * 1000,  // 1 minute
-            activityEvents: "mouseup",
-            pingUrl: '{{PORTAL}}/api/ping',
-            logoutUrl: '{{PORTAL}}/logout',
-            timeoutUrl: '{{PORTAL}}/logout?timed_out=1',
-            modalShown: false,
-            intervalMonitor: false,
-            onwarning: function() {$("#session-warning-modal").modal("show"); if (sessMon.modalShown) sessMon.intervalMonitor = setInterval(function(){ sessMon.ontimeout() }, 2 * 60 * 1000);}
-      });
-      window.sessMon = sessMon;
-       // Configure the session timeout warning modal
-      $("#session-warning-modal").modal({"backdrop": false,"keyboard": false,"show": false})
-              .on("show.bs.modal", function() { sessMon.modalShown = true})
-              .on("hide.bs.modal", function() { sessMon.modalShown = false; if (sessMon.intervalMonitor) clearInterval(sessMon.intervalMonitor); })
-              .on("click", "#stay-logged-in", sessMon.extendsess)
-              .on("click", "#log-out", sessMon.logout)
-              .find("#remaining-time").text(sessMon.timeBeforeWarning / 1000);
-   {% endif %}
-});
-</script>
 <script defer>setTimeout("$('.no-fouc').removeClass('no-fouc');", 300);</script>
+<!-- session monitor script -->
+{% if user %}
+<script type="text/javascript">
+    (function() {
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('head')[0];
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src='{{PORTAL}}{{ url_for("static", filename="js/sessionMonitor.js") }}'; 
+        //inserting script in HEAD element
+        s.appendChild(g);
+        function loadSessionMonitor() {
+            setTimeout(function() {
+                (new SessionMonitorObj("{{PORTAL}}", "{{csrf_token()}}", "{{config.PERMANENT_SESSION_LIFETIME if config.PERMANENT_SESSION_LIFETIME}}")).init();
+            }, 150);
+        }
+        g.onreadystatechange= function () { //IE
+            if (this.readyState === "complete") {
+                loadSessionMonitor();
+            }
+        }
+        g.onload = loadSessionMonitor; //other browsers
+    })();
+</script>
+{% endif %}
