forgot to move the images - sigh - to the correct folder

--- a/portal/gil/templates/gil/base.html
+++ b/portal/gil/templates/gil/base.html
@@ -167,7 +167,7 @@
     <div id="portalWrapperNav"><!-- content contains session monitor and piwik information --></div>
   {% endblock %}
   </section>
-{% block hidden %}<div class="visuallyhidden"><img src="{{url_for('static', filename='img/GIL.svgz')}}"></div>{% endblock %}
+{% block hidden %}<div class="visuallyhidden"><img src="{{url_for('gil.static', filename='img/GIL.svgz')}}"></div>{% endblock %}
 {% block modal %}
     <div class="modal fade" id="modal-register">
       <div class="modal-dialog" role="document">
