--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -573,6 +573,10 @@ select:not([multiple]) {
   .notification.active {
     display: block;
   }
+  .notification[data-visited] {
+    display: none;
+  }
+  .notification
   a {
     color: #FFF;
     text-decoration:underline;
@@ -594,6 +598,10 @@ select:not([multiple]) {
     top: 0;
     margin-top: 4px;
     margin-right: 1em;
+    display: none;
+    &.active {
+      display: block;
+    }
     &:hover {
       cursor: pointer;
     }
