--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -626,7 +626,7 @@ div.footer-wrapper.right-panel {
   padding: 1em 2.5em 2.5em 2.5em;
 }
 #termsText {
-  padding: 0 1em;
+  padding: 0;
 }
 #agreeLabel {
   margin-left: 2em;
@@ -645,7 +645,6 @@ div.footer-wrapper.right-panel {
     text-decoration: underline;
   }
   .terms-checkbox-container {
-    margin-left: 2em;
     margin-top: 0.5em;
   }
   .terms-checkbox-container i:hover {
@@ -667,9 +666,15 @@ div.footer-wrapper.right-panel {
   margin: 0.3em 0.5em 0 0;
 }
 .terms-tick-box-text {
-  width: 96.5%;
+  width: 93.5%;
   max-width: 100%;
+  margin-left: 2px;
   display: inline-block;
+}
+.edit-view {
+  .terms-tick-box-text {
+    margin-left: 4px;
+  }
 }
 .website-consent-script {
   .terms-tick-box-text {
@@ -2790,6 +2795,9 @@ div.timezone-warning.text-warning {
   .portal-header {
     line-height: 50px;
   }
+  #termsText {
+    padding: 0 1em;
+  }
 }
 @media (min-width: 500px) {
     .iq-container {
@@ -3194,6 +3202,21 @@ div.timezone-warning.text-warning {
     }
     .form-group input[type=checkbox], .form-group  input[type=radio] {
       margin-top: 4px;
+    }
+  }
+
+  #topTerms {
+    .terms-checkbox-container {
+      margin-left: 1em;
+      .terms-tick-box-text {
+        margin-left: 0;
+        width: 96.5%;
+      }
+      .edit-view {
+        .terms-tick-box-text {
+          width: 94%;
+        }
+      }
     }
   }
 
