--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -98,7 +98,7 @@
                         data-url="/privacy">
                           <i class="fa fa-square-o fa-lg terms-tick-box"></i>
                           {% trans privacy_url="/privacy?disableLinks=true", terms_url="/terms?disableLinks=true" %}
-                          <span>&nbsp;By checking this box, I confirm that I have read and accept the website <a href="{{privacy_url}}" class="required-link">privacy policy</a> and <a href="{{terms_url}}"  class="required-link">terms</a></span>
+                          <span class="terms-tick-box-text">By checking this box, I confirm that I have read and accept the website <a href="{{privacy_url}}" class="required-link">privacy policy</a> and <a href="{{terms_url}}"  class="required-link">terms</a></span>
                           {% endtrans %}
                       </label>
                     {% endif %}
