--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -5,6 +5,7 @@
 {% from "initial_queries_macros.html" import tou, nameGroup, rolesGroup, dobGroup, patientQGroup, clinic, consent %}
 {% from "profile/profile_macros.html" import profileOrgsSelector %}
 <input type="hidden" id="iq_userId" value="{{user.id}}" />
+<input type="hidden" id="preselectClinic" value="{{session.get('associate_clinic_id', '')}}" />
 <div id="progressWrapper"><ul id="progressbar" class="progressbar"></ul></div>
 {{tou(terms, user)}}
 <div id="aboutForm" class="tnth-hide">
@@ -92,26 +93,14 @@
 <script src="{{ url_for('static', filename='js/initialQueries.js') }}"></script>
 {% endblock %}
 {% block document_ready %}
-var CONSENT_WITH_TOP_LEVEL_ORG = {% if config.CONSENT_WITH_TOP_LEVEL_ORG %}true{%else%}false{%endif%};
-var CONFIG_DEFAULT_CORE_DATA = {%if config.REQUIRED_CORE_DATA %}{{config.REQUIRED_CORE_DATA|safe}}{% else%}false{%endif%};
-// Check if there's a session variable for associated clinic
-var preselectClinic = "{{session.get('associate_clinic_id', '')}}";
-var OT = new OrgTool();
-OT.init();
 var fc = new window.FieldsChecker("{{user.id}}",
-                            {%-if user.has_role(ROLE.PATIENT) or user.has_role(ROLE.STAFF) or user.has_role(ROLE.STAFF_ADMIN)-%}true{%-else-%}false{%-endif-%}, CONFIG_DEFAULT_CORE_DATA,
-                            null,
-                            preselectClinic,
+                            {%-if user.has_role(ROLE.PATIENT) or user.has_role(ROLE.STAFF) or user.has_role(ROLE.STAFF_ADMIN)-%}true{%-else-%}false{%-endif-%},
                             {i18next: i18next,
                              tnthAjax: tnthAjax,
-                             orgTool: OT,
+                             orgTool: new OrgTool(),
                              assembleContent: assembleContent,
                              tnthDates: tnthDates
                             });
-var profileObj = new Profile("{{user.id}}", "{{user.id}}");
-profileObj.initSection("orgsstateselector");
-profileObj.initSection("biopsy");
-
 
 $(document).ready(function(){
   /*
