--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -72,17 +72,14 @@
 {% endblock %}
 {% block document_ready %}
 var leafOrgs = {% if leaf_organizations %} {{leaf_organizations | safe}} {% else %} false {% endif %};
-var OT = new OrgTool(); OT.init();
 var aco = new AccountCreationObj(
 [{'name': '{{ROLE.PATIENT}}'}, {'name': '{{ROLE.WRITE_ONLY}}'}],
 {'i18next': i18next,
 'tnthAjax': tnthAjax,
 'SYSTEM_IDENTIFIER_ENUM': SYSTEM_IDENTIFIER_ENUM,
-'OrgTool': OT,
+'OrgTool': new OrgTool(),
 'leafOrgs': leafOrgs
 });
-var profileObj = new Profile("", $("#currentStaffUserId").val());
-profileObj.initSections();
 $(function() {
     /*** need to run this instead of the one function from main.js because we don't want to pre-check any org here ***/
     aco.getOrgs(aco.populatePatientOrgs);
