--- a/portal/templates/profile/patient_profile.html
+++ b/portal/templates/profile/patient_profile.html
@@ -38,7 +38,7 @@
                 <br/>
               </div>
               <div class="modal-footer">
-                <button onclick="profileObj.handleLoginAs(event);" type="button" class="btn btn-default">{{ _("OK") }}</button>
+                <button id="btnLoginAs" type="button" class="btn btn-default">{{ _("OK") }}</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">{{ _("Cancel") }}</button>
               </div>
             </div>
