--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -433,6 +433,10 @@ select:not([multiple]) {
   display: none;
 }
 
+.resources-menu-item {
+  display: none;
+}
+
 #mainHolder {
   visibility: hidden;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
