--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -85,6 +85,9 @@
                             {% if user and user.has_role(ROLE.RESEARCHER) %}
                             <li><a href="{{PORTAL}}/research">{{ _("Research Data") }}</a></li>
                             {% endif %}
+                            {% if user and (user.has_role(ROLE.STAFF) or user.has_role(ROLE.STAFF_ADMIN)) %}
+                            <li class="resources-menu-item"><a href="{{PORTAL}}/resources">{{ _("Resources") }}</a></li>
+                            {% endif %}
                             <li><a href="{{PORTAL}}/logout">{{ _("Log Out of TrueNTH") }}</a></li>
                         </ul>
                         {% endif %}
@@ -129,6 +132,9 @@
                     {% if user and (user.has_role(ROLE.ADMIN) or user.has_role(ROLE.ANALYST)) %}<li><a href="{{PORTAL}}/reporting">{{ _("Reporting Dashboard") }}</a></li>{% endif %}
                     {% if user and user.has_role(ROLE.RESEARCHER) %}
                     <li><a href="{{PORTAL}}/research">{{ _("Research Data") }}</a></li>
+                    {% endif %}
+                    {% if user and (user.has_role(ROLE.STAFF) or user.has_role(ROLE.STAFF_ADMIN)) %}
+                        <li class="resources-menu-item"><a href="{{PORTAL}}/resources">{{ _("Resources") }}</a></li>
                     {% endif %}
                     {% if user %}<li><a href="{{PORTAL}}/logout">{{ _("Log Out of TrueNTH") }}</a></li>{% endif %}
                 </ul>
