--- a/portal/eproms/templates/eproms/work_instruction.html
+++ b/portal/eproms/templates/eproms/work_instruction.html
@@ -1,13 +1,15 @@
 {% extends "eproms/base.html" %}
 {% block main %}
-<h4 class="tnth-headline work-instruction-title hidden-print">
+<h4 class="tnth-headline work-instruction-title">
     <span>{{_("Work Instruction")}}</span>
-    <div class="pull-right">
+    <div class="pull-right hidden-print">
         <a href="{{url_for('.resources')}}"><span class="glyphicon glyphicon-repeat" title="{{_('Back to Resources')}}"></span></a>
         <span class="glyphicon glyphicon-print work-instruction-printicon" title="{{_('Print')}}"></span>
     </div>
 </h4>
-<h3 class="first-letter">{{title | replace('-', ' ')}}</h3>
-<div class="work-instruction-content">{{content|safe}}</div>
+<div class="work-instruction-content">
+	<h3 class="work-instruction-content-heading first-letter">{{title | replace('-', ' ')}}</h3>
+	<div>{{content|safe}}</div>
+</div>
 <script src="{{url_for('.static', filename='js/resources.js')}}"></script>
 {% endblock %}
