--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -421,8 +421,11 @@ select:not([multiple]) {
     cursor: pointer;
   }
 }
+.work-instruction-content-heading {
+  margin-bottom: 1.5em;
+}
 .work-instruction-content {
-  padding: 1em 1.5em;
+  padding: 0 0.5em;
   max-width: 100%;
   overflow: auto;
 }
