--- a/portal/eproms/templates/eproms/work_instruction.html
+++ b/portal/eproms/templates/eproms/work_instruction.html
@@ -1,10 +1,10 @@
 {% extends "eproms/base.html" %}
 {% block main %}
 <h4 class="tnth-headline work-instruction-title">
-    <span>{{_("Work Instruction")}}</span>
+    <span>{{_("Work Instructions")}}</span>
     <div class="pull-right hidden-print">
-        <a href="{{url_for('.resources')}}"><span class="glyphicon glyphicon-repeat" title="{{_('Back to Resources')}}"></span></a>
         <span class="glyphicon glyphicon-print work-instruction-printicon" title="{{_('Print')}}"></span>
+        <a href="{{url_for('.resources')}}"><span class="glyphicon glyphicon-chevron-right" title="{{_('Back to Resources')}}"></span></a>
     </div>
 </h4>
 <div class="work-instruction-content">
