TN-609 Front end changes for invite/reminder emails for MUSIC

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2400,6 +2400,9 @@ input.clinic {
   #profileEmailSelect {
       width: 280px;
       max-width: 100%;
+      & option.inactive {
+        display: none;
+      }
   }
   #btnProfileSendEmail, .custom-btn {
       width: 280px;
