--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -260,15 +260,12 @@
             </label>
             <select  id="profileEmailSelect" class="form-control bd-element" aria-labelledby="sendEmailLabel">
                 <option value="">{{ _("Select Email...") }}</option>
-                {%- if person.has_role('write_only') %}<option value="invite">{{ app_text('profileSendEmail option invite') }}</option>{%- endif %}
-                <option value="reminder">{{ app_text('profileSendEmail option reminder') }}</option>
+                <option value="invite" data-url="{{url_for('portal.patient_invite_email', user_id=person.id)}}" {%if not person.has_role('write_only')%}class="inactive"{%endif%}>{{_("TrueNTH Invite")}}</option>
+                <option value="reminder" data-url="{{url_for('portal.patient_reminder_email', user_id=person.id)}}">{{_("TrueNTH Reminder")}}</option>
             </select>
             <button id="btnProfileSendEmail" class="btn btn-tnth-primary disabled" type="button">{{ _("Send email") }}</button>
             <div id="profileEmailMessage" class="text-info"></div>
             <div id="profileEmailErrorMessage" class="text-danger"></div>
-            <input type="hidden" id="patientRegistrationInviteEmailUrl" value="{{url_for('portal.patient_invite_email', user_id=person.id)}}" />
-            <div id="patientReminderEmailBody" class="tnth-hide">{{ app_text('profileSendEmail reminder email_body', url_for('user.login', _external=True, email=person.email)) | safe }}</div>
-            <div id="patientReminderEmailSubject" class="tnth-hide">{{ app_text('profileSendEmail reminder email_subject') }}</div>
         </div>
     {%- endif -%}
 {%- endmacro %}
@@ -288,7 +285,7 @@
             <h4 class="text-success registration-label">{{_('registered')}}</h4>
             {%- endif -%}
         </div>
-        <button id="btnProfileSendEmail" class="btn btn-tnth-primary sm-btn disabled">{{ _("Send registration email") }}</button>
+        <button id="btnProfileSendEmail" class="btn btn-tnth-primary sm-btn disabled">{{ _("Send email") }}</button>
         <div id="profileEmailMessage" class="text-info"></div>
         <div id="profileEmailErrorMessage" class="text-danger"></div>
         <input type="hidden" id="staffRegistrationEmailUrl" value="{{url_for('staff.staff_registration_email', user_id=person.id)}}" />
@@ -312,7 +309,7 @@
                         {%- if not config.CUSTOM_PATIENT_DETAIL -%}
                         <div class="tab">
                           <input id="tab-two" name="tabGroup" type="radio" data-validate="false" class="tab-input">
-                          <label id="lbPatientRegEmail" for="tab-two" class="tab-label {% if person and person.has_role('write_only') %}active{%endif %}">{{_("Send registration email to patient")}}</label>
+                          <label id="lbPatientRegEmail" for="tab-two" class="tab-label {% if person and person.has_role('write_only') %}active{%endif %}">{{_("Invite or remind patient over email to complete their questionnaire")}}</label>
                           <div class="tab-content">
                             <div id="registrationEmailContainer">{{profileSendEmail(person)}}</div>
                           </div>
