--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -14,6 +14,14 @@
             <div id="termsExpand" class="tnth-hide">
               <a href=""><i class="fa fa-plus"></i> {{ _("View TrueNTH Terms") }}</a>
             </div>
+            <div id="termsCheckbox_default" class="tnth-hide">
+              <div class="links-container">
+                <a href="/privacy?disableLinks=true" target="_blank">{{_("Privacy Policy")}}</a>
+                <a href="/terms?disableLinks=true" target="_blank">{{_("Terms")}}</a>
+                <a href="" class="terms-url" target="_blank">{{_("General Terms of Use")}}</a>
+              </div>
+              <div class="text-warning">{{_("By clicking on the 'Next' button below, you are consenting to the TrueNTH terms referenced above.")}}</div>
+            </div>
             <div id="termsCheckbox">
                <div class="terms-checkbox-container">
                {% set tou_url = terms['url'] if terms else '' %}
@@ -40,68 +48,43 @@
                           data-tou-type="website terms of use"
                           data-core-data-type="website_terms_of_use"
                           data-url="{{tou_url}}" />
-
                     </label>
                 {% else %}
-                    <!-- EPROMS - user account has been created by staff -->
-                    {% if user.has_role(ROLE.PATIENT) %}
-                         <label
-                          class="terms-label tnth-hide"
+                     <label
+                      class="terms-label tnth-hide">
+                        <i class="fa fa-square-o fa-lg terms-tick-box edit-view"></i>
+                        <span class="edit-view"><span class="terms-tick-box-text">{{_("By checking this box, I confirm that I have read the information notice above and consent and agree to the processing of my personal information (including my health information) on the terms described in this Consent.") }}</span></span>
+                        <!-- display message specific to patient who has already consented - possible in EPROMs -->
+                        {% if user.has_role(ROLE.PATIENT) %}
+                          <div class="display-view text-warning tnth-hide">{{_("You have previously provided your consent to the website during a visit at your treating site. If you would like a copy of this please contact your study contact.")}}<br/></div>
+                        {% endif %}
+                          <input type="hidden"
                           data-agree="false"
                           data-type="terms"
                           data-tou-type="subject website consent"
                           data-core-data-type="subject_website_consent"
-                          data-url="{{tou_url}}">
-                          <i class="fa fa-square-o fa-lg terms-tick-box edit-view"></i>
-                          <span class="edit-view"><span class="terms-tick-box-text">{{_("By checking this box, I confirm that I have read the information notice above and consent and agree to the processing of my personal information (including my health information) on the terms described in this Consent.") }}</span></span>
-                          <div class="display-view text-warning tnth-hide">{{_("You have previously provided your consent to the website during a visit at your treating site. If you would like a copy of this please contact your study contact.")}}<br/></div>
-                        </label>
-                         <label class="terms-label tnth-hide">
-                            <i class="fa fa-square-o fa-lg terms-tick-box"></i>
-                            {% trans
-                              privacy_url="/privacy?disableLinks=true", terms_url="terms?disableLinks=true" %}
-                              <span class="terms-tick-box-text">&nbsp;By checking this box, I confirm that I have read and accept the website <a href="{{privacy_url}}" class="required-link">privacy policy</a> and
-                                <a href="{{terms_url}}" class="required-link">terms</a></span>
-                            {% endtrans %}
-                            <input type="hidden"
-                              data-agree="false"
-                              data-type="terms"
-                              data-core-data-type="privacy_policy"
-                              data-tou-type="privacy policy"
-                              data-url="/privacy" />
-                            <input type="hidden"
-                              data-agree="false"
-                              data-type="terms"
-                              data-tou-type="website terms of use"
-                              data-core-data-type="website_terms_of_use"
-                              data-url="{{tou_url}}" />
-                        </label>
-                    {% else %}
-                      <!-- TrueNTH -->
-                      <label
-                        class="terms-label tnth-hide"
-                        data-agree="false"
-                        data-type="terms"
-                        data-tou-type="website terms of use"
-                        data-core-data-type="website_terms_of_use"
-                        data-url="{{tou_url}}">
-                        <i class="fa fa-square-o fa-lg terms-tick-box edit-view"></i>
-                        <span class="terms-tick-box-text">{{_("By checking this box, I confirm that I have read the information notice above and consent and agree to the processing of my personal information (including my health information) on the terms described in this Consent.") }}</span>
-                      </label>
-                      <br/>
-                      <label
-                        class="terms-label tnth-hide"
-                        data-agree="false"
-                        data-type="terms"
-                        data-tou-type="privacy policy"
-                        data-core-data-type="privacy_policy"
-                        data-url="/privacy">
-                          <i class="fa fa-square-o fa-lg terms-tick-box"></i>
-                          {% trans privacy_url="/privacy?disableLinks=true", terms_url="/terms?disableLinks=true" %}
-                          <span class="terms-tick-box-text">By checking this box, I confirm that I have read and accept the website <a href="{{privacy_url}}" class="required-link">privacy policy</a> and <a href="{{terms_url}}"  class="required-link">terms</a></span>
-                          {% endtrans %}
-                      </label>
-                    {% endif %}
+                          data-url="{{tou_url}}" />
+                          <input type="hidden"
+                          data-agree="false"
+                          data-type="terms"
+                          data-tou-type="website terms of use"
+                          data-core-data-type="website_terms_of_use"
+                          data-url="{{tou_url}}" />
+                    </label>
+                     <label class="terms-label tnth-hide">
+                        <i class="fa fa-square-o fa-lg terms-tick-box"></i>
+                        {% trans
+                          privacy_url="/privacy?disableLinks=true", terms_url="terms?disableLinks=true" %}
+                          <span class="terms-tick-box-text">&nbsp;By checking this box, I confirm that I have read and accept the website <a href="{{privacy_url}}" class="required-link">privacy policy</a> and
+                            <a href="{{terms_url}}" class="required-link">terms</a></span>
+                        {% endtrans %}
+                        <input type="hidden"
+                          data-agree="false"
+                          data-type="terms"
+                          data-core-data-type="privacy_policy"
+                          data-tou-type="privacy policy"
+                          data-url="/privacy" />
+                    </label>
                 {% endif %}
               </div>
             </div>
@@ -128,7 +111,7 @@
             </div>
           </div>
     </div>
-    <input type="hidden" id="termsURL" data-url="" value=""/>
+    <input type="hidden" id="termsURL" class="terms-url" data-url="" value=""/>
   {%- endmacro %}
 
   {% macro paperWebsiteConsentScript(terms) -%}
