--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -692,6 +692,7 @@ div.footer-wrapper.right-panel {
 }
 #termsContainer.website-consent-script #termsText {
   padding: 1em 2.5em 2.5em 2.5em;
+  display: block;
 }
 #termsText {
   padding: 0;
