--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -43,7 +43,8 @@
             <div id="socialMediaRegistrationContainer">
                 <div class="btn-social-container">
                      <p class="profile-item-title">{{ _("Register using:")}}</p>
-                    <div>
+                    <!-- hiding this temporarily -->
+                    <div class="tnth-hide">
                         <a href="{{ url_for('auth.login', provider_name='facebook', next=request.args.get('next')) }}"
                            class="btn btn-social btn-facebook">
                             <i class="fa fa-facebook"></i>{{_("Log In With Facebook")}}
