--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -240,29 +240,36 @@
         <div class="help-block with-errors" id="erroremail"></div>
     </div>
 {%- endmacro %}
+{% macro render_emailSelector(prefix='registration', status_title='Registration Status:', label='not registered') -%}
+    <div id="{{prefix}}StatusContainer" class="{{prefix}}-status-container">
+        <span class="text-muted">{{_(status_title)}}</span>
+        <h4 class="{{prefix}}-label text-warning">{{_(label)}}</h4>
+        <div class="email-selector-container">
+            <label id="sendEmailLabel" class="text-muted">{{_("Send email to patient")}}</label>
+            <select id="profileEmailSelect" class="form-control bd-element {{prefix}}-email-selector" aria-labelledby="sendEmailLabel">
+                <option value="">{{_("Select Email...")}}</option>
+                {{caller()}}
+            </select>
+        </div>
+    </div>
+{%- endmacro %}
 {% macro profileEmailForm(person) -%}
     {%- if person -%}
         <div id="sendEmailForm" data-profile-section-id="patientemailform">
             <input type="hidden" name="_userId" id="_userId" value="{{person.id}}" />
-            <div class="registration-status-container">
-                <span class="text-muted">{{_('Registration status:')}}</span>
-                {% if person and person.has_role("write_only") %}<h4 class="text-warning registration-label">{{_('not yet registered')}}</h4>
-                {%- else -%}
-                <h4 class="text-success registration-label">{{_('registered')}}</h4>
-                {%- endif -%}
-            </div>
-            <label id="sendEmailLabel" class="text-muted">
-                {%-if person and person.has_role(ROLE.PATIENT)-%}
-                    {{_("Send email to patient")}}
-                {%-else-%}
-                    {{_("Send email to user")}}
-                {%-endif-%}
-            </label>
-            <select  id="profileEmailSelect" class="form-control bd-element" aria-labelledby="sendEmailLabel">
-                <option value="">{{ _("Select Email...") }}</option>
-                <option value="invite" data-url="{{url_for('portal.patient_invite_email', user_id=person.id)}}" {%if not person.has_role('write_only')%}class="inactive"{%endif%}>{{_("TrueNTH Invite")}}</option>
-                <option value="reminder" data-url="{{url_for('portal.patient_reminder_email', user_id=person.id)}}">{{_("TrueNTH Reminder")}}</option>
-            </select>
+            {% if person.first_top_organization().name == config.ACCEPT_TERMS_ON_NEXT_ORG %}
+                {% call render_emailSelector(prefix='assessment', status_title='P3P Assessment Status:', label='not available') %}
+                    <option value="invite" data-url="{{url_for('portal.patient_invite_email', user_id=person.id)}}">{{_("Initial invite to complete P3P assessment")}}</option>
+                    <option value="reminder" data-url="{{url_for('portal.patient_reminder_email', user_id=person.id)}}">{{_("Reminder to complete P3P assessment")}}</option>
+                {% endcall %}
+            {% else %}
+                {% call render_emailSelector() %}
+                    {%if person.has_role('write_only')%}
+                        <option value="invite" data-url="{{url_for('portal.patient_invite_email', user_id=person.id)}}">{{_("TrueNTH Invite")}}</option>
+                    {%endif %}
+                    <option value="reminder" data-url="{{url_for('portal.patient_reminder_email', user_id=person.id)}}">{{_("TrueNTH Reminder")}}</option>
+                {% endcall %}
+            {% endif %}
             <button id="btnProfileSendEmail" class="btn btn-tnth-primary disabled" type="button">{{ _("Send email") }}</button>
             <div id="profileEmailMessage" class="text-info"></div>
             <div id="profileEmailErrorMessage" class="text-danger"></div>
@@ -309,7 +316,7 @@
                         {%- if not config.CUSTOM_PATIENT_DETAIL -%}
                         <div class="tab">
                           <input id="tab-two" name="tabGroup" type="radio" data-validate="false" class="tab-input">
-                          <label id="lbPatientRegEmail" for="tab-two" class="tab-label {% if person and person.has_role('write_only') %}active{%endif %}">{{_("Invite or remind patient over email to complete their questionnaire")}}</label>
+                          <label id="lbPatientRegEmail" for="tab-two" class="tab-label {% if person and person.has_role('write_only') %}active{%endif %}">{{_("Send invitaion and reminder emails to patient")}}</label>
                           <div class="tab-content">
                             <div id="registrationEmailContainer">{{profileSendEmail(person)}}</div>
                           </div>
