--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -240,10 +240,10 @@
         <div class="help-block with-errors" id="erroremail"></div>
     </div>
 {%- endmacro %}
-{% macro render_emailSelector(prefix='registration', status_title='Registration Status:', label='not registered') -%}
+{% macro render_emailSelector(prefix='registration', status_title=_('Registration Status:'), label=_('not registered')) -%}
     <div id="{{prefix}}StatusContainer" class="{{prefix}}-status-container">
-        <span class="text-muted">{{_(status_title)}}</span>
-        <h4 class="{{prefix}}-label text-warning">{{_(label)}}</h4>
+        <span class="text-muted">{{status_title}}</span>
+        <h4 class="{{prefix}}-label text-warning">{{label}}S</h4>
         <div class="email-selector-container">
             <label id="sendEmailLabel" class="text-muted">{{_("Send email to patient")}}</label>
             <select id="profileEmailSelect" class="form-control bd-element {{prefix}}-email-selector" aria-labelledby="sendEmailLabel">
@@ -258,7 +258,7 @@
         <div id="sendEmailForm" data-profile-section-id="patientemailform">
             <input type="hidden" name="_userId" id="_userId" value="{{person.id}}" />
             {% if person.first_top_organization() and (person.first_top_organization().name == config.ACCEPT_TERMS_ON_NEXT_ORG) %}
-                {% call render_emailSelector(prefix='assessment', status_title='P3P Assessment Status:', label='not available') %}
+                {% call render_emailSelector(prefix='assessment', status_title=_('P3P Assessment Status:'), label=_('not available')) %}
                     <option value="invite" data-url="{{url_for('portal.patient_invite_email', user_id=person.id)}}">{{_("Initial invite to complete P3P assessment")}}</option>
                     <option value="reminder" data-url="{{url_for('portal.patient_reminder_email', user_id=person.id)}}">{{_("Reminder to complete P3P assessment")}}</option>
                 {% endcall %}
